--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v0.0.3/css/unicons.css">
 </head>
 
 <body>
-    <app-root>Loading...</app-root>
+  <app-root>Loading...</app-root>
 </body>
 
 </html>
